<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <import type="android.text.TextUtils" />
        <variable
            name="viewModel"
            type="com.test.solution.case2.locations.LocationsViewModel" />
    </data>

        <android.support.constraint.ConstraintLayout
            android:visibility="@{viewModel.locationsAvailable ? View.VISIBLE : View.GONE}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
                
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/select_textview"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/select_loaction_text"
                        android:textColor="@color/md_black_1000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/location_spinner"/>

                    <Spinner
                        android:id="@+id/location_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:padding="10dp"
                        android:layout_margin="10dp"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        app:layout_constraintTop_toBottomOf="@+id/select_textview" />

                    <TextView
                        android:id="@+id/mode_of_transport_textview"
                        android:gravity="center"
                        android:visibility="@{(TextUtils.isEmpty(viewModel.timeFromCentral.timeByCar) &amp;&amp; TextUtils.isEmpty(viewModel.timeFromCentral.timeByTrain))  ? View.GONE : View.VISIBLE}"
                        android:layout_margin="15dp"
                        android:textSize="20sp"
                        android:text="@string/mode_of_transport_textview"
                        android:textColor="@color/md_black_1000"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/location_spinner"/>

                    <TextView
                        android:id="@+id/car_time_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_car"
                        tools:text="40 minutes"
                        android:text="@{viewModel.timeFromCentral.timeByCar}"
                        android:gravity="center"
                        android:textColor="@color/md_black_1000"
                        android:textSize="18sp"
                        android:visibility="@{TextUtils.isEmpty(viewModel.timeFromCentral.timeByCar)  ? View.GONE : View.VISIBLE}"
                        android:layout_marginTop="15dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/train_time_textview"
                        app:layout_constraintTop_toBottomOf="@+id/mode_of_transport_textview"/>

                    <TextView
                        android:id="@+id/train_time_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_train"
                        tools:text="40 minutes"
                        android:text="@{viewModel.timeFromCentral.timeByTrain}"
                        android:textColor="@color/md_black_1000"
                        android:textSize="18sp"
                        android:visibility="@{TextUtils.isEmpty(viewModel.timeFromCentral.timeByTrain)  ? View.GONE : View.VISIBLE}"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/car_time_textview"
                        app:layout_constraintTop_toBottomOf="@+id/mode_of_transport_textview"/>

                    <TextView
                        android:onClick="@{() -> viewModel.navigate()}"
                        android:layout_width="wrap_content"
                        android:text="@string/navigate"
                        android:gravity="center"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_marginTop="30dp"
                        android:id="@+id/navigate"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/car_time_textview"
                        android:textColor="@color/md_white_1000"
                        android:background="@drawable/button_rounded"
                        android:layout_height="wrap_content" />

                </android.support.constraint.ConstraintLayout>

            </ScrollView>

        </android.support.constraint.ConstraintLayout>

</layout>